# claude-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_EN.md  install.ps1  install.sh
.claude/: WORKFLOW.md
.claude/skills/workflow-ledger/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/claude-proxy-cli/: Cargo.toml
crates/claude-proxy-cli/src/: logging.rs  main.rs
crates/claude-proxy-cli/src/tui/: app.rs  mod.rs  theme.rs  ui.rs  widgets.rs
crates/claude-proxy-cli/src/tui/pages/: dashboard.rs  mod.rs  providers.rs  settings.rs  system.rs
crates/claude-proxy-config/: Cargo.toml
crates/claude-proxy-config/src/: error.rs  lib.rs  migrate.rs  settings.rs
crates/claude-proxy-core/: Cargo.toml
crates/claude-proxy-core/src/: lib.rs  types.rs
crates/claude-proxy-providers/: Cargo.toml
crates/claude-proxy-providers/src/: anthropic.rs  chat_completions.rs  chatgpt.rs  http.rs  lib.rs  openai.rs  openai_compat.rs  provider.rs  reasoning_markers.rs  responses.rs  sse.rs  tagged_thinking.rs  thinking_sanitizer.rs  tool_args.rs  tool_choice.rs
crates/claude-proxy-providers/src/chatgpt/: auth.rs  responses.rs  transport.rs
crates/claude-proxy-providers/src/copilot/: auth.rs  chat_completions.rs  headers.rs  messages.rs  mod.rs  mod.rs.bak  mod.rs.new  model.rs  preprocess.rs  responses.rs  sse.rs  thinking.rs
crates/claude-proxy-providers/src/openai/: request.rs
crates/claude-proxy-providers/tests/fixtures/chatgpt_codex/: native_request_body.json  native_request_headers.json  stream_custom_tool.sse  stream_failed.sse  stream_function_tool.sse  stream_incomplete.sse  stream_rate_limit.sse  stream_success.sse
crates/claude-proxy-server/: Cargo.toml
crates/claude-proxy-server/src/: app.rs  lib.rs  middleware.rs  non_stream.rs  persistence.rs  routes.rs
crates/claude-proxy-server/tests/: integration.rs
docs/superpowers/plans/: 2026-05-20-chatgpt-prompt-too-long-retry.md  2026-05-21-chatgpt-advanced-codex-parity.md
docs/superpowers/specs/: 2026-05-18-structured-model-alias-reasoning-design.md  2026-05-19-thinking-rendering-compat-design.md  2026-05-20-thinking-leak-governance-design.md  2026-05-25-chatgpt-codex-provider-modernization-design.md  2026-05-28-claude-code-third-party-provider-quality-gates.md  2026-06-02-chatgpt-continuation-context-metrics-design.md  2026-06-08-chatgpt-codex-standalone-tools-design.md  2026-06-08-codex-responses-lite-observability-design.md  2026-06-08-responses-lite-dashboard-metrics-design.md
legou/gm/lg-director/: README.md  docker-compose.env.example  docker-compose.prod.yml
legou/gm/lg-director/backend/: README.md
scripts/: collect-stop-diagnostics.sh
