[workspace]
resolver = "2"
members = [
    "crates/claude-proxy-config",
    "crates/claude-proxy-core",
    "crates/claude-proxy-providers",
    "crates/claude-proxy-server",
    "crates/claude-proxy-cli",
]

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/claude-proxy"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
