[package]
name = "claude-proxy-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-proxy"
path = "src/main.rs"

[dependencies]
claude-proxy-config = { path = "../claude-proxy-config" }
claude-proxy-core = { path = "../claude-proxy-core" }
claude-proxy-providers = { path = "../claude-proxy-providers" }
claude-proxy-server = { path = "../claude-proxy-server" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dialoguer = "0.11"
colored = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"
