[package]
name = "claude-proxy-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "6"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
