[package]
name = "claude-proxy-providers"
version.workspace = true
edition.workspace = true

[dependencies]
claude-proxy-config = { path = "../claude-proxy-config" }
claude-proxy-core = { path = "../claude-proxy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
