[package]
name = "claude-proxy-providers"
version.workspace = true
edition.workspace = true

[dependencies]
claude-proxy-config = { path = "../claude-proxy-config" }
claude-proxy-core = { path = "../claude-proxy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks", "hickory-dns"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
dirs = "6"
