[package]
name = "claude-proxy-providers"
version.workspace = true
edition.workspace = true

[dependencies]
claude-proxy-config = { path = "../claude-proxy-config" }
claude-proxy-core = { path = "../claude-proxy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks", "hickory-dns"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
dirs = "6"
base64 = "0.22"
